--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ECarChargeInfo</string>
+
+
+    <string name="search">"     충전소 검색"</string>
+    <string name="combo">DC콤보</string>
+    <string name="demo">DC차데모</string>
+    <string name="ac">AC3상</string>
+    <string name="slow">완속</string>
+    <string name="charge_speed">속도</string>
+
 </resources>
