--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ECarChargeInfo</string>
+    <string name="google_map_key">AIzaSyD7-BtLpCHb8dvqUVEqb07oTcS6gbcnWmA</string>
 
 
     <string name="search">"     충전소 검색"</string>
