--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ECarChargeInfo</string>
-    <string name="google_map_key">AIzaSyD7-BtLpCHb8dvqUVEqb07oTcS6gbcnWmA</string>
+    <string name="google_map_key">AIzaSyBzoTmwd9Oqn47qw8TBO3wNWy46z3Vuv9o</string>
 
-    <string name="search">"     충전소 검색"</string>
+    <string name="search">충전소 검색</string>
     <string name="combo">DC콤보</string>
     <string name="demo">DC차데모</string>
     <string name="ac">AC3상</string>
