--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="info_detail_phone">고객센터</string>
     <string name="info_detail_parking_info">주차정보</string>
     <string name="info_detail_addr">상세위치</string>
+    <string name="complete_copy">주소가 복사되었습니다.</string>
+    <string name="incomplete_copy">주소가 복사되지 않았습니다.</string>
 
 </resources>
